# Snapshot-File-System-360

./: .gitignore  CMakeLists.txt  README.md  command_handlers.c  command_handlers.h  fs  main.c  shared_values.h  testfs
filestructures/: bitmap.c  bitmap.h  block_operations.c  block_operations.h  shared_values.h  test_bitmap  testbitmap.c
filesystem/: directory.h  file_system.c  file_system.h  inode.h  testfilesystem.c
vcs/: checkout.c  commit.c  helpers.c  helpers.h  init.c  internal.h  log.c  util.c  vcs.h
